# voxel-game

./: .gitignore  .gitmodules  CMakeLists.txt  clion_cmake.sh  commit.py  default.nix  pull_all.sh  renderdoc.cap
include/voxel/: block.h  chunk.h  fwdecl.h
src/: main.cpp
src/voxel/: chunk.cpp
